--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,17 +19,31 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: 'npm'
+      
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm install
+          npm install -g npm@latest
+      
+      - name: Update browserslist database
+        run: npx update-browserslist-db@latest
+      
       - name: Build
-        run: npm run build
+        run: |
+          echo "Building the application..."
+          npm run build
+          echo "Build completed. Contents of dist directory:"
+          ls -la dist/
+      
       - name: Setup Pages
         uses: actions/configure-pages@v4
+      
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
