--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -28,7 +29,8 @@ jobs:
       
       - name: Install dependencies
         run: |
-          npm install
+          npm cache clean --force
+          npm install --legacy-peer-deps
           npm install -g npm@latest
       
       - name: Update browserslist database
@@ -37,9 +39,13 @@ jobs:
       - name: Build
         run: |
           echo "Building the application..."
-          npm run build
+          npm run build || (echo "Build failed" && exit 1)
           echo "Build completed. Contents of dist directory:"
           ls -la dist/
+          if [ ! -f "dist/index.html" ]; then
+            echo "Error: dist/index.html not found"
+            exit 1
+          fi
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -55,6 +61,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
+    timeout-minutes: 5
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
